# Vertex

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_new.txt  LICENSE  README.md  TODO.txt  cpp.hint
sandbox/: CMakeLists.txt
sandbox/include/sandbox/: CMakeLists.txt  sandbox.h  sandbox.hpp
sandbox/src/: CMakeLists.txt  sandbox.cpp  sandbox2.cpp
sandbox/src/sandbox/: sandbox.cpp  sandbox.h
test/: CMakeLists.txt
test/install/: CMakeLists.txt  header_main.cpp  main.cpp  shared_main.cpp  static_main.cpp
test/src/stdlib/: main.cpp
test/src/stdlib/string/: base64.cpp  crypto.cpp  string.cpp
test/src/util/bit/: bit.cpp
test/src/util/crypto/: crypto.cpp
test/src/util/encode/: utf.cpp
test/src/util/string/: regex.cpp  string.cpp
test/src/vertex_test/: test.hpp  test_util.hpp
test/src/vertex_test/math/: CMakeLists.txt  common.cpp  comparison.cpp  exponential.cpp  trigonometric.cpp
test/src/vertex_test/os/: CMakeLists.txt  child_process.cpp  file.cpp  filesystem.cpp  io.cpp  locale.cpp  mutex.cpp  path.cpp  path.hpp  process.cpp  random.cpp  shared_library.cpp  shared_library_lib.cpp  system_info.cpp  system_memory.cpp  thread.cpp  time.cpp
test/src/vertex_test/std/: CMakeLists.txt  aligned_storage.cpp  array.cpp  char_traits.cpp  dynamic_array.cpp  dynamic_array_profile.cpp  io.cpp  memory.cpp  profile_dynamic_array_base.cpp  profile_std_vector.cpp  profile_vx_vector.cpp  span.cpp  static_string.cpp  static_vector.cpp  string.cpp  string_convert.cpp  string_utils.cpp  string_view.cpp  uint_n.cpp  vector.cpp  vector_profile_tools.hpp
test/src/vertex_test/util/: CMakeLists.txt
vertex/: CMakeLists.txt
vertex/include/vertex/: CMakeLists.txt  config.h  setup.h
vertex/include/vertex/_test/: CMakeLists.txt  test.hpp
vertex/include/vertex/app/: CMakeLists.txt  app.h  app.hpp  device_id.hpp  error_code.h  hints.hpp  id.hpp  init.cpp  init.h  instance_pair.hpp  main.hpp  message_box.hpp  owner_ptr.hpp
vertex/include/vertex/build_config/: build_config.h  windows_build_config.h
vertex/include/vertex/config/: CMakeLists.txt  architecture.hpp  assert.hpp  compiler.hpp  flags.hpp  hash.hpp  language.hpp  language_config.hpp  os.hpp  platform.hpp  scoped_enum.hpp  simd.hpp  type_traits.hpp  util.hpp  version.hpp  version_number.hpp
vertex/include/vertex/core/: assert.hpp  compiler.hpp  endian.hpp  error.hpp  log.hpp  memory.hpp  platform.hpp  platform_config.hpp  platform_defines.hpp  profiler.hpp  validate.hpp  version.hpp
vertex/include/vertex/detail/: setup.h
vertex/include/vertex/image/: CMakeLists.txt  defs.hpp  enum_error_code.h  fn_blit.h  fn_color.h  fn_edit.h  fn_mask.h  fn_transform.h  image.h  image.hpp  image_format.h  image_info.h  io_load.h  io_write.h  iterator.h  load.hpp  mipmaps.h  noise_sampler.h  pixel.h  pixel_iterator.h  sampler.h  simd.hpp  write.hpp
vertex/include/vertex/main/: main.h  main.hpp
vertex/include/vertex/math/: CMakeLists.txt  color.hpp  config.h  config.hpp  constants.hpp  enum_orientation.h  math.hpp  rect.hpp  simd.hpp  type_traits.hpp  types.hpp  vec.hpp
vertex/include/vertex/math_old/: config.h  enum_orientation.h
vertex/include/vertex/os/: CMakeLists.txt  atomic.hpp  file.hpp  filesystem.hpp  filesystem_old.hpp  handle.hpp  info.hpp  io.hpp  library.hpp  locale.hpp  memory.hpp  mutex.hpp  native_string.hpp  path.hpp  power.hpp  process.hpp  random.hpp  shared_library.hpp  shell.hpp  system_info.hpp  system_memory.hpp  thread.hpp  thread_id.hpp  time.hpp
vertex/include/vertex/pixel/: CMakeLists.txt  blend.h  blit.h  blit.hpp  draw.hpp  enum_filter.h  enum_wrap_mode.h  iterator.h  iterator.hpp  mask.h  mask.hpp  mipmaps.h  mipmaps.hpp  palette.hpp  palette_surface.hpp  palette_surface_iterator.hpp  pixel.h  pixel_color.h  pixel_format.hpp  pixel_iterator.h  pixel_type_info.h  quantization.hpp  raw_palette_block.hpp  raw_pixel.h  raw_pixel.hpp  raw_transform.h  raw_transform.hpp  sampler.h  sampler.hpp  surface.h  surface.hpp  surface_color.h  surface_manip.hpp  surface_transform.h  surface_transform.hpp  transform.h
vertex/include/vertex/std/: CMakeLists.txt  aligned_storage.hpp  array.hpp  char_traits.hpp  double_linked_list.hpp  dynamic_array.hpp  error.hpp  float_bits.hpp  float_traits.hpp  hex.hpp  io.hpp  iterator.hpp  memory.hpp  opaque_ptr.hpp  opaque_storage.hpp  ranges.hpp  single_linked_list.hpp  span.hpp  static_string.hpp  static_vector.hpp  string.hpp  string_cast.hpp  string_convert.hpp  string_utils.hpp  string_view.hpp  unique_ptr.hpp  utf.hpp  vector.hpp  vector_traits.hpp
vertex/include/vertex/stdlib/: bit.h  filesystem.h  iostream.hpp  string.h  time.h  utf.h
vertex/include/vertex/system/: CMakeLists.txt  assert.h  assert.hpp  bit.h  class.hpp  compiler.h  compiler.hpp  endian.h  error.h  error.hpp  log.h  log.hpp  logger.h  main.hpp  memory.h  memory.hpp  platform.hpp  platform_config.hpp  platform_defines.hpp  profiler.h  profiler.hpp  validate.hpp  version.h
vertex/include/vertex/test/: test.hpp
vertex/include/vertex/util/: CMakeLists.txt  base64.hpp  bit.hpp  bit_field.hpp  fixed_array.hpp  format.hpp  io.hpp  iostream.hpp  memory.hpp  optional.hpp  random.hpp  regex.hpp  string.hpp  time.hpp  type_traits.hpp  utf.hpp
vertex/src/GLFW_impl/: glfw_init.cpp  glfw_joystick.cpp  glfw_monitor.cpp  glfw_window.cpp
vertex/src/stb_image_impl/: load.cpp  write.cpp
vertex/src/vertex/detail/: setup.h  type_traits.h
vertex/src/vertex/image/: enum_image_filter.h  enum_image_format.h  fn_blit.h  fn_color_adjust.h  fn_transform.h  image.h  image_info.h  io_load.h  io_write.h  mipmaps.h  noise_sampler.h  pixel.h  pixel_iterator.h  sampler.h
vertex/src/vertex/math/: math.h  setup.h  type_traits.h
vertex/src/vertex/tools/: enum_bit_operators.h
vertex/src/vertex_impl/: CMakeLists.txt
vertex/src/vertex_impl/app/: CMakeLists.txt  app.cpp  app_internal.hpp  init.cpp  init_internal.h  message_box.cpp  message_box_internal.hpp
vertex/src/vertex_impl/core/: error.cpp  log.cpp  profiler.cpp
vertex/src/win32_impl/: win32_header.h
(+1360 files in other folders)
